<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:title="@string/settings_menu" />

    <item
        android:id="@+id/display_type"
        android:title="@string/display_menu" />

    <item
        android:id="@+id/folders"
        android:icon="@drawable/ic_action_folder"
        android:orderInCategory="5"
        android:title="@string/folders_menu"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification" />
</menu>